# gedcom-lite

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/handcrafted/: ansel-sample.ged
src/gedcom_lite/: __init__.py  ansel.py  core.py  dates.py  traversal.py
src/gedcom_lite/cli/: __init__.py  read.py  search.py  update.py
tests/: conftest.py  test_ansel.py  test_cli_read.py  test_cli_search.py  test_cli_update.py  test_dates.py  test_encoding.py  test_mutation.py  test_round_trip.py  test_tokenizer.py  test_traversal.py
